# docker-data-ETL

./: .gitignore  Makefile  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt
.metals/: metals.lock.db  metals.mv.db
dags/: ETL_demo.py  clean_flow.py
dags/pkg/etlflow/: Clean.py  Extract.py  Load.py  Transformation.py
dags/pkg/settings/: setting.py
data/: dict_tw.txt
data/input/: input.json
docker/: docker-compose.yml
docker/docker-airflow/: Dockerfile  requirements.txt
docker/docker-airflow/config/: airflow.cfg
docker/docker-airflow/script/: entrypoint.sh
docker/docker-base/: Dockerfile  requirements.txt
docker/docker-notebook/: Dockerfile
docker/docker-postgres/: Dockerfile
docker/docker-spark/: Dockerfile
docker/docker-spark-base/: Dockerfile  requirements.txt
docker/docker-spark-master/: Dockerfile
docker/docker-spark-worker/: Dockerfile
notebooks/: query.ipynb  word.ipynb
spark/: Dockerfile
spark/app/: load.py  transfformation.py  transformation.py
spark/conf/: spark-env.sh
