[tool.poetry]
name = "docker-data-etl"
version = "0.1.0"
description = "a light weighting ETL platform"
authors = ["Kelvin Liao"]
license = "MIT"
readme = "README.md"
packages = [{include = "docker_data_etl"}]

[tool.poetry.dependencies]
python = "^3.9"
celery = "5.2.3"
kombu = "5.2.4"
tornado = "6.1"
werkzeug = "0.16.0"
sqlalchemy = "1.3.15"
jieba = "0.42.1"
requests = "2.25.1"
beautifulsoup4 = "4.9.3"
pyspark = "3.2.2"
pandas = "1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
